2013-11-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fix the combo of user to assign an
	event to one of them. Incident #409

2013-11-21  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php: Fixed jquery
	code that broke the snmp3 fields when edit a snmp component
	Incident #402

2013-11-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: removed the hack for metaconsole, now
	this hack fails because it is fixed the images in the metaconsole.

2013-11-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: removed the hack for metaconsole in the
	"ui_toggle", now this hack fails because it is fixed the images in
	the metaconsole.
	
	* operation/agentes/alerts_status.php: cleaned source code style.

2013-11-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/groups/configure_group.php, godmode/groups/group_list.php:
	fixed the show and edit groups with the ACL of the user has not
	access to the parent.

2013-11-20  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php: Fix new events load condition
	to be loaded only when down scroll

2013-11-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed visual console links
	to other visual consoles when there are alert fired on them
	for bug #391

2013-11-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/reporting/reporting_builder.php,
	  include/functions_groups.php,
	  include/functions_users.php: Reverted changes for TSOL. Will be merged
	  after the 5.0SP1 release.

2013-11-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/config_process.php: added lost line about the autorefresh.
	
	* include/functions_html.php: re-fixed the images from metaconsole.

2013-11-19  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.build_query.php: Fixed a
	subquery OR condition for not normal type.
